TD-2775: fix title page line-height for h1. Also cleaned up wrapping in CreateCoverImage() - the max width could be beyond the width of the image.

--- a/pathway/PsSupport/Styles/Dictionary/FrontMatter.css
+++ b/pathway/PsSupport/Styles/Dictionary/FrontMatter.css
@@ -24,6 +24,7 @@ h1 {
     font-size: 250%;
     margin-top: 2em;
     text-align: center;
+    line-height: 125%;
 }
 h2 {
     font-size: 125%;
